Correcting the layout issue on some pages bottom, add css to improve colors for Accessibility

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -391,6 +391,10 @@ span#map{
     object-fit: cover;
 }
 
+.card {
+    background-color: #d9d9d9 !important;
+}
+
 /* Article section */
 .article-info {
     background-color: #d9d9d9;
@@ -616,11 +620,8 @@ textarea.write-article {
     z-index: 1000;
     transition: all 0.5s;
     background-color: #374F2F;
-    color: #D9D9D9;
+    color: #ffffff;
     font-size: 1.2rem;
-}
-.footer:not(:hover) {
-    opacity: 0.8;
 }
 
 footer a {
